# backends/common/swagger/swagger.yml
@@ -84,9 +84,15 @@ paths:
                     type: number
                   name:
                     type: string
+                  accessToken:
+                    type: string
+                  refreshToken:
+                    type: string
                 required:
                   - id
                   - name
+                  - accessToken
+                  - refreshToken
         "401":
           description: Default Response
           content:
@@ -349,13 +355,54 @@ paths:
     post:
       tags:
         - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  minLength: 1
+                  type: string
+                password:
+                  minLength: 1
+                  type: string
+              required:
+                - name
+                - password
       responses:
         "200":
           description: Default Response
           content:
             application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  id:
+                    type: number
+                  name:
+                    type: string
+                  accessToken:
+                    type: string
+                  refreshToken:
+                    type: string
+                required:
+                  - id
+                  - name
+                  - accessToken
+                  - refreshToken
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
   /api/common/auth/me:
     post:
       tags:
@@ -366,4 +413,23 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  id:
+                    type: number
+                  name:
+                    type: string
+                required:
+                  - id
+                  - name
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required:
+                  - message
